# py_huddle

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml
scrape/: scrape.py
src/api/: archive.py  basketball.py  google_maps.py
src/auth/: login.py
src/config/: __init__.py
src/data/: models.py  processing.py
src/pdf/: analyzer.py  generator.py
src/ui/: components.py  pages.py  state.py
src/utils/: debugging.py  formatting.py  logging.py  pdf_fields.py  pdf_file_numbers.py  summe_km.py
